--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,18 +24,13 @@ jobs:
       matrix:
         include:
           #  两行一组，删除不需要的版本
-          - platform: ds918p
-            version: 6.2.4-25556
+          
           - platform: ds918p
             version: 7.0.1-42218
           - platform: ds918p
             version: 7.1.0-42661
 
-          - platform: ds920p
-            version: 7.0.1-42218
-          - platform: ds920p
-            version: 7.1.0-42661
-
+         
 
     steps:
       - name: 检出项目文件
@@ -93,6 +88,11 @@ jobs:
           ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/igb/rpext-index.json
           ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/igbvf/rpext-index.json
           ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/ixgbevf/rpext-index.json
+          ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/e1000/rpext-index.json
+          ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/e1000e/rpext-index.json
+          ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/i40e/rpext-index.json
+          ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/iavf/rpext-index.json
+          ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/ixgbe.vanilla/rpext-index.json
 
       - name: 添加扩展驱动[dva3221]
         if: matrix.platform == 'dva3221'
